# IndiaShield

./: Dockerfile  README.md  app.py  baseline_scores.json  demo.html  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
indiashield/: __init__.py  env.py  graders.py  messages.py  model.py  network.py  tasks.py
server/: app.py
