[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "indiashield"
version = "1.0.0"
description = "WhatsApp misinformation containment + MuRIL compression RL environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv",
    "numpy",
    "openai",
    "huggingface_hub",
    "aiofiles",
]

[project.scripts]
server = "app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/Prashansab/IndiaShield"
Repository = "https://github.com/prashu0705/IndiaShield"
